[package]
name = "kazoeage-oneesan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
async-recursion = "0.3.2"
async-std = "1.10.0"
futures = { version = "0.3.17", features = ["default", "thread-pool"] }
